Sat Apr  4 23:47:02 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/ASTVisitor.java: #visit returns a node
	  which has same type with the argument, to allow non-destructive
	  AST rewriting.

	* net/loveruby/cflat/ast/*Node.java (#accept): ditto.

	* net/loveruby/cflat/compiler/Visitor.java: ditto.

	* net/loveruby/cflat/compiler/*.java: ditto.

	* net/loveruby/cflat/compiler/TypeChecker.java: make
	  non-destructive.

	* net/loveruby/cflat/parser/Parser.jj: use StmtNode/ExprNode
	  instead of Node.

Wed Dec 24 03:43:14 2008  Minero Aoki  <aamine@loveruby.net>

	* lib/sizeof_jmpbuf.c: new analysis program.

	* lib/Makefile: add a rule to build sizeof_jmpbuf.

Wed Dec 24 02:54:06 2008  Minero Aoki  <aamine@loveruby.net>

	* import/setjmp.hb: new file to support setjmp.

	* test: test setjmp.

Mon Dec 15 00:05:16 2008  Minero Aoki  <aamine@loveruby.net>

	* introduce virtual stack again, for only local variables and tmp
	  variables.  Function arguments use true push & pop.

	* --verbose-asm prints stack frame layout in detail.

Sun Dec 14 21:04:56 2008  Minero Aoki  <aamine@loveruby.net>

	* test: test alloca more.

Sun Dec 14 20:43:47 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java
	  (compileFunctionBody): remove bp from saveRegs first.

Mon Dec  8 00:55:33 2008  Minero Aoki  <aamine@loveruby.net>

	* lib/alloca.s: alloca() implemeted.

	* lib/Makefile: build it.

	* import/alloca.hb: declare alloca.

Sun Dec  7 23:26:50 2008  Minero Aoki  <aamine@loveruby.net>

	* net: revert r4100; implementing alloca() is too difficult for
	  current architecture.

Sun Dec  7 23:25:25 2008  Minero Aoki  <aamine@loveruby.net>

	* lib/libcbc.cb -> lib/stdarg.cb

	* lib/Makefile: ditto.

Sun Dec  7 22:27:51 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: manage stack
	  offset by generator, instead of using machine push/pop.
